category controls overflow fix, styling footer legend

--- a/viz/styles/components/audience.css
+++ b/viz/styles/components/audience.css
@@ -22,7 +22,12 @@
 }
 
 .category-controls-wrapper {
-  width: 500px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-shrink: 0;
+  flex-grow: 1;
 }
 
 .category-controls {
